tests/bad/immutable.glaz
fn main() {
  let x = 100;
  x = 10;
}
